--- a/CSS/estilos.scss
+++ b/CSS/estilos.scss
@@ -23,14 +23,16 @@ body {
     background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
     background-size: cover;
     background-position: center;
-    font-size: 30px !important; 
+    font-size: 30px !important;
+
     .navbar-nav {
         .nav-link {
-        text-shadow: 0 0 5px black;
-        color: white; 
-        transition: color 0.3s;         
-        &:hover {
-            color: $color2; 
+            text-shadow: 0 0 5px black;
+            color: white;
+            transition: color 0.3s;
+
+            &:hover {
+                color: $color2;
             }
         }
     }
@@ -42,6 +44,7 @@ main {
     background-size: cover;
     background-position: center;
     height: 100vh;
+
     .jumbotron {
         color: white;
         text-shadow: 0 0 5px #000;
@@ -56,7 +59,7 @@ main {
     color: white;
 }
 
-@mixin separadoresCustoms($fondo: $color6){
+@mixin separadoresCustoms($fondo: $color6) {
     background-color: $fondo;
     text-align: center;
     padding: 20px;
@@ -76,7 +79,8 @@ main {
     @include separadoresCustoms($fondo: $color3)
 }
 
-.cleft, .pleft {
+.cleft,
+.pleft {
     background-size: cover;
     background-position: center;
     height: 500px;
@@ -90,16 +94,19 @@ main {
     background-image: url(../assets/muchaspaletas.webp) !important;
 }
 
-.cright a, .pright {
+.cright a,
+.pright {
     text-decoration: none;
     color: $color4;
 }
+
 .cpright {
     background-color: $color3;
     text-shadow: 0 0 5px black;
 }
 
-.paletas, .padelProfesional {
+.paletas,
+.padelProfesional {
     text-align: center;
     color: white;
     background-size: cover;
@@ -112,7 +119,42 @@ main {
 }
 
 .paletas {
-    background-color:$color2;
+    background-color: $color2;
+}
+
+.galeria {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -10px; 
+
+    .galeria-foto {
+        width: calc(100% / 3 - 20px);
+        margin: 10px;
+        transition: transform 0.3s ease; 
+
+        img {
+            width: 100%;
+            height: auto;
+            border: 5px solid $color4;
+            border-radius: 5px;
+        }
+
+        &:hover {
+            transform: scale(0.9); 
+        }
+    }
+
+    @for $i from 7 through 12 {
+        .galeria-foto:nth-child(#{$i}) {
+            width: calc(100% / 3 - 20px);
+            margin: 10px;
+            transition: transform 0.3s ease; 
+
+            &:hover {
+                transform: scale(0.9); 
+            }
+        }
+    }
 }
 
 .reglas {
@@ -120,14 +162,58 @@ main {
     background-color: white;
     border: 2px solid black;
     text-align: center;
+
     .listaReglas li {
         list-style-type: none;
     }
-    .rbleft, .rbright {
+
+    .rbleft,
+    .rbright {
         text-decoration: none;
         color: green;
     }
 }
+
+.chingoB-golpe,
+.martinV-golpe,
+.tapiaSq-golpe,
+.leoS-golpe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+    width: 400px;
+    border: 2px solid #333;
+
+}
+
+
+@each $jugadores in chingoB,
+martinV,
+tapiaSq,
+leoS {
+    .#{$jugadores}-golpe {
+        background-image: url("../assets/#{$jugadores}.webp");
+        background-size: cover;
+        background-position: center;
+        transition: transform 0.3s ease;
+
+
+        &:hover {
+            transform: scale(1.1);
+        }
+    }
+}
+
+.golpes {
+    color: #000;
+    background-color: #FCEFF9;
+    border: 2px solid black;
+    border-radius: 10px;
+    text-align: center;
+}
+
+
 
 .bcontacto {
     background-color: grey;
@@ -139,26 +225,26 @@ main {
     background-size: cover;
     text-align: center;
 }
-.formalign
 
-footer {
+.formalign footer {
     background-image: url(../assets/footerBackground.webp) !important;
     background-size: cover !important;
     background-position: center !important;
-    text-align: center !important;}
-    
-    .footerc {
-        text-align: center !important;
-        background-image: url(../assets/footerBackground.webp) !important;
-        background-size: cover !important;
-        background-position: center !important;
-    }    
-    
+    text-align: center !important;
+}
+
+.footerc {
+    text-align: center !important;
+    background-image: url(../assets/footerBackground.webp) !important;
+    background-size: cover !important;
+    background-position: center !important;
+}
+
 
 footer a {
     font-size: 30px;
     color: white;
     text-shadow: 0 0 5px #000 !important;
     letter-spacing: 15px;
-    
+
 }
