--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -116,7 +116,7 @@ main .jumbotron {
 .galeria {
   display: flex;
   flex-wrap: wrap;
-  margin: -10px;
+  margin: 0;
 }
 .galeria .galeria-foto {
   width: calc(33.3333333333% - 20px);
