--- a/CSS/estilos.scss
+++ b/CSS/estilos.scss
@@ -125,7 +125,7 @@ main {
 .galeria {
     display: flex;
     flex-wrap: wrap;
-    margin: -10px; 
+    margin: 0; 
 
     .galeria-foto {
         width: calc(100% / 3 - 20px);
